--- a/about.css
+++ b/about.css
@@ -10,6 +10,7 @@ nav {
   body {
     background-color: white;
     font-family: "Righteous", cursive;
+    cursor: url(https://cur.cursors-4u.net/user/use-1/use30.cur), auto !important;
   }
   h1 {
     color: black;
