--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ html {
 body {
   color: black;
   font-family: "Righteous", cursive;
+  cursor: url(https://cur.cursors-4u.net/user/use-1/use30.cur), auto !important;
 }
 head {
   color: #dddddd;
