added a new card and changed text color of titles

--- a/index.css
+++ b/index.css
@@ -213,3 +213,15 @@ title {
     font-size: 6rem;
   }
 }
+
+.card-title {
+  color: blue;
+}
+
+.gallery-head {
+  color: green;
+}
+
+.lead {
+  color: peru;
+}
