--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@ title {
   font-size: 3rem;
   text-align: center;
   margin-top: 8%;
-  margin-bottom: 80px;
+  margin-bottom: 0px;
   text-transform: uppercase;
 }
 .gallery-icon {
@@ -78,8 +78,9 @@ title {
   border-radius: 0;
 }
 .lead {
-  margin-top: 35%;
   font-size: 1.5rem;
+  text-align: center;
+  margin-bottom: 10%;
 }
 .navbar {
   background-color: black;
