Added a custom navbar
Changes made:
1. Wrote the css for a custom navbar.

--- a/index.css
+++ b/index.css
@@ -128,6 +128,26 @@ title {
   animation: blink 1000ms ease-in infinite;
 }
 
+/* ScrollBar */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #031937;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
+
 @keyframes blink {
   from {
     border-right-color: rgba(255, 255, 255, 0.75);
