--- a/index.css
+++ b/index.css
@@ -218,3 +218,17 @@ title {
 .card-title {
   color: #94000f;
 }
+
+.fa-heart-o {
+  color: red;
+  cursor: pointer;
+  padding-left: 4px;
+  font-size:x-large;
+}
+
+.fa-heart {
+  color: red;
+  cursor: pointer;
+  padding-left: 4px;
+  font-size:x-large;
+}
