--- a/index.css
+++ b/index.css
@@ -218,3 +218,15 @@ title {
 .card-title {
   color: #94000f;
 }
+
+.input-group {
+  display: flex !important;
+  place-items: flex-end !important;
+  align-content: space-around !important;
+  flex-direction: column !important;
+  padding-bottom: 1.1em;
+}
+
+#search-result {
+  font-style: italic;
+}
