--- a/index.css
+++ b/index.css
@@ -253,6 +253,10 @@ title {
 
 .footer{
   /* background: rgb(168, 160, 160); */
+  position: fixed;
+  left: 0;
+  bottom: -12px;
+  width: 100%;
   background: black;
   color: #ffffff;
   line-height: 2.2rem;
@@ -262,7 +266,7 @@ title {
 }
 
 .footer .fa-linkedin-square,
-.footer .fa-twitter{
+.footer .fa-github{
   position: absolute;
   left: 2rem;
   bottom: 0.3rem;
@@ -274,11 +278,16 @@ title {
   /* top: 2rem; */
 }
 
-.footer .fa-twitter{
+.footer .fa-github{
   left: 4rem;
 }
 
 .copy{
   position: absolute;
   right: 2rem;
+}
+
+.footer .fa-linkedin-square:hover,
+.footer .fa-github:hover{
+  transform: scale(1.1);
 }
