--- a/about.css
+++ b/about.css
@@ -43,6 +43,20 @@ nav {
   .about-title {
     padding-top: 6%;
   }
+
+  #loading {
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-align: center;
+    opacity: 0.8;
+    background-color: #fff;
+    z-index: 99;
+  }
+  
   
   @media only screen and (max-width: 600px) {
     .display-3 {
