--- a/index.css
+++ b/index.css
@@ -37,6 +37,9 @@ title {
   height: calc(100vh - 4.45rem);
 }
 
+#typewriter{
+  font-size: 150%;
+}
 /* scale-animation-by-sudo-nick16 */
 .card {
   transition: transform 0.2s;
@@ -136,7 +139,7 @@ title {
 }
 
 .cursor {
-  border-right: 4px solid rgba(255, 255, 255, 0.75);
+  border-right: 6px solid rgba(255, 255, 255, 0.75);
   animation: blink 1000ms ease-in infinite;
 }
 
