--- a/index.css
+++ b/index.css
@@ -1,17 +1,29 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 html {
   scroll-behavior: smooth;
 }
+
 body {
   color: black;
   font-family: "Righteous", cursive;
   cursor: url(https://cur.cursors-4u.net/user/use-1/use30.cur), auto !important;
+  min-height: 100vh;
+  max-width: 100%;
 }
+
 head {
   color: #dddddd;
 }
+
 title {
   color: #dddddd;
 }
+
 #loading {
   position: fixed;
   display: block;
@@ -33,7 +45,8 @@ title {
 
   display: flex;
   flex-direction: column;
-  width: auto;
+  justify-content: center;
+  max-width: 100%;
   height: calc(100vh - 4.45rem);
 }
 
@@ -41,6 +54,7 @@ title {
 .card {
   transition: transform 0.2s;
 }
+
 .card:hover {
   transform: scale(1.05);
 }
@@ -53,21 +67,26 @@ title {
   border-radius: 50%;
   margin-bottom: 4%;
 }
+
 .card {
   height: 100%;
   -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
 }
+
 .card-body.hidden {
   display: none;
 }
+
 .card-img-top {
   padding: 2rem;
 }
+
 .display-3 {
   font-size: 8rem;
 }
+
 .fas fa-chevron-down fa-6x gallery-icon {
   padding-top: 100px;
 }
@@ -79,39 +98,48 @@ title {
   margin-bottom: 0px;
   text-transform: uppercase;
 }
+
 .gallery-icon {
   color: #000000;
   text-align: center;
 }
+
 .itemNav {
   padding: 15px;
 }
+
 .jumbotron {
   border-radius: 0;
 }
+
 .lead {
   font-size: 1.5rem;
   text-align: center;
   margin-bottom: 10%;
 }
+
 .navbar {
   background-color: black;
   color: white;
 }
-.navbar ~ * {
+
+.navbar~* {
   position: relative;
   top: 4.45rem;
 }
+
 .navTitle {
   color: #ffffff;
   padding-left: 50px;
   size: 50px;
 }
+
 .view-div {
   display: flex;
   justify-content: center;
   margin-bottom: 100px;
 }
+
 .view-button {
   width: 130px;
   height: 50px;
@@ -124,13 +152,16 @@ title {
   align-items: center;
   justify-content: space-around;
 }
-.view-button > img {
+
+.view-button>img {
   width: 24px;
   height: 24px;
 }
+
 .view-button:hover {
   cursor: pointer;
 }
+
 .view-button.selected {
   outline: 1px solid black;
 }
@@ -142,22 +173,22 @@ title {
 
 /* ScrollBar */
 ::-webkit-scrollbar {
-	width: 10px;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-	background: #f1f1f1;
+  background: #f1f1f1;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: #031937;
+  background: #031937;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: #555;
+  background: #555;
 }
 
 @keyframes blink {
@@ -174,12 +205,17 @@ title {
   .lead {
     margin-top: 60%;
   }
+
   #header {
     width: 510px;
+  }
+  .display-1 {
+    font-size: 4rem;
   }
   #icon1 {
     margin-top: -6%;
   }
+
   #gallery1 {
     font-size: 1.5rem;
 
@@ -187,32 +223,41 @@ title {
     margin-left: 50%;
     text-transform: uppercase;
   }
+
   #normal-view {
     margin-left: 50%;
   }
 }
+
 @media (min-width: 321px) and (max-width: 449px) {
   .lead {
     margin-top: 50%;
   }
+
   #header {
     width: 500px;
+  }
+  .display-1 {
+    font-size: 4.5rem;
   }
   #gallery1,
   #normal-view {
     margin-left: 20%;
   }
 }
+
 @media (min-width: 449px) and (max-width: 750px) {
   #header {
     width: 100%;
   }
 }
+
 @media (min-width: 760px) {
   #header {
     width: 100%;
   }
 }
+
 @media (min-width: 800px) and (max-width: 1440px) {
   #header {
     width: 100%;
@@ -223,9 +268,11 @@ title {
   .display-3 {
     font-size: 4rem;
   }
+
   .gallery-head {
     font-size: 2rem;
   }
+
   .navTitle {
     padding-left: 3px;
   }
@@ -235,7 +282,8 @@ title {
   #header {
     height: calc(100vh - 4.45rem - 15px);
   }
-  .navbar ~ * {
+
+  .navbar~* {
     top: calc(4.45rem + 15px);
   }
 }
@@ -263,7 +311,7 @@ title {
   font-style: italic;
 }
 
-.footer{
+.footer {
   /* background: rgb(168, 160, 160); */
   position: fixed;
   left: 0;
@@ -278,7 +326,7 @@ title {
 }
 
 .footer .fa-linkedin-square,
-.footer .fa-github{
+.footer .fa-github {
   position: absolute;
   left: 2rem;
   bottom: 0.3rem;
@@ -290,16 +338,16 @@ title {
   /* top: 2rem; */
 }
 
-.footer .fa-github{
+.footer .fa-github {
   left: 4rem;
 }
 
-.copy{
+.copy {
   position: absolute;
   right: 2rem;
 }
 
 .footer .fa-linkedin-square:hover,
-.footer .fa-github:hover{
+.footer .fa-github:hover {
   transform: scale(1.1);
 }
